--- a/app/globals.css
+++ b/app/globals.css
@@ -180,7 +180,7 @@ nav.scrolled {
   line-height: 1.2;
   text-shadow: 2px 2px 12px rgba(0, 0, 0, 0.6);
   text-decoration: underline;
-  text-decoration-color: red;
+  text-decoration-color: #ffffff;
   text-underline-offset: 10px;
   text-decoration-thickness: 3px;
 }
